feat(auth): add banner image

--- a/src/app/features/auth/components/auth-layout/auth-layout.component.html
+++ b/src/app/features/auth/components/auth-layout/auth-layout.component.html
@@ -4,5 +4,10 @@
       <router-outlet></router-outlet>
     </div>
   </section>
-  <section class="hidden w-2/3 bg-gray-100 lg:block"></section>
+  <section class="hidden w-2/3 bg-black lg:block">
+    <img
+      src="/assets/auth-banner.webp"
+      class="object-cover object-center w-full h-full opacity-50"
+    />
+  </section>
 </main>
