--- a/src/app/features/auth/pages/reset-password/reset-password.component.html
+++ b/src/app/features/auth/pages/reset-password/reset-password.component.html
@@ -6,11 +6,12 @@
     </p>
   </div>
 
-  <form class="flex flex-col gap-2">
+  <form class="flex flex-col gap-2" ngNativeValidate>
     <div class="flex flex-col gap-1">
       <mdb-form-control class="w-full">
         <input
           mdbInput
+          required
           name="email"
           type="email"
           class="form-control"
