--- a/src/app/features/auth/pages/register/register.component.html
+++ b/src/app/features/auth/pages/register/register.component.html
@@ -6,7 +6,11 @@
     </p>
   </div>
 
-  <form class="flex flex-col gap-2" ngNativeValidate>
+  <form
+    class="flex flex-col gap-2"
+    ngNativeValidate
+    (submit)="handleSubmit($event)"
+  >
     <div class="flex flex-col gap-1">
       <mdb-form-control>
         <input
@@ -16,6 +20,7 @@
           type="email"
           class="form-control"
           placeholder="Email"
+          [disabled]="isSubmitting"
         />
       </mdb-form-control>
     </div>
@@ -29,11 +34,17 @@
           name="password"
           class="form-control"
           placeholder="Senha"
+          [disabled]="isSubmitting"
         />
       </mdb-form-control>
     </div>
 
-    <button type="submit" class="w-full btn btn-primary" mdbRipple>
+    <button
+      type="submit"
+      class="w-full btn btn-primary"
+      mdbRipple
+      [disabled]="isSubmitting"
+    >
       Criar conta
     </button>
   </form>
