--- a/src/app/features/auth/pages/login/login.component.html
+++ b/src/app/features/auth/pages/login/login.component.html
@@ -12,38 +12,35 @@
     ngNativeValidate
   >
     <div class="flex flex-col gap-1">
-      <mdb-form-control>
-        <input
-          mdbInput
-          required
-          type="email"
-          name="email"
-          class="form-control !w-full"
-          placeholder="Email"
-          [disabled]="isSubmitting"
-        />
-      </mdb-form-control>
+      <input
+        pInputText
+        required
+        type="email"
+        name="email"
+        placeholder="Email"
+        class="p-inputtext-sm"
+        [disabled]="isSubmitting"
+      />
     </div>
 
     <div class="flex flex-col gap-1">
-      <mdb-form-control>
-        <input
-          mdbInput
-          required
-          name="password"
-          type="password"
-          class="form-control"
-          placeholder="Senha"
-          [disabled]="isSubmitting"
-        />
-      </mdb-form-control>
+      <input
+        pInputText
+        required
+        name="password"
+        type="password"
+        placeholder="Senha"
+        class="p-inputtext-sm"
+        [disabled]="isSubmitting"
+      />
     </div>
 
     <button
+      pButton
+      pRipple
       type="submit"
-      class="w-full btn btn-primary"
-      mdbRipple
       [disabled]="isSubmitting"
+      size="small"
     >
       Entrar
     </button>
