--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -24,9 +24,7 @@
           routerLink="/app/workouts"
           class="flex items-center gap-4 px-4 py-2 text-sm transition-colors duration-200 border rounded-md cursor-pointer hover:bg-gray-100"
         >
-          <i
-            class="flex items-center justify-center text-lg pi pi-money-bill"
-          ></i>
+          <i class="flex items-center justify-center text-lg pi pi-list"></i>
           Treinos
         </a>
       </li>
