feat: add global service

--- a/src/app/features/workouts/pages/workout-details/workout-details.component.html
+++ b/src/app/features/workouts/pages/workout-details/workout-details.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <h2 class="mb-4 text-xl font-semibold text-gray-700">Exercícios</h2>
-  <app-exercise-list [exercises]="exercises"></app-exercise-list>
+  <app-exercise-list [exercises]="workout.exercises"></app-exercise-list>
 
   <p-dialog
     header="Adicionar Exercício"
