--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -57,9 +57,9 @@
   >
     <div class="flex flex-col min-w-0 text-left">
       <span class="text-sm font-semibold truncate text-zinc-700">
-        FLAVINHO DO PNEU
+        {{ user.name }}
       </span>
-      <span class="text-xs truncate text-zinc-500">flavinho&#64;gmail.com</span>
+      <span class="text-xs truncate text-zinc-500">{{ user.email }}</span>
     </div>
 
     <i class="flex items-center justify-center shrink-0 pi pi-sign-out"></i>
