--- a/src/app/features/workouts/pages/workouts/components/workout/workout.component.html
+++ b/src/app/features/workouts/pages/workouts/components/workout/workout.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/workouts', workout.id]">
+<a [routerLink]="['/app/workouts', workout.id]">
   <div
     class="flex flex-col justify-between h-full max-w-sm gap-4 p-4 px-6 overflow-hidden bg-white rounded-md shadow-sm"
   >
