chore: format files using prettier

--- a/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
+++ b/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
@@ -4,7 +4,7 @@
   <div>
     <div class="mb-2 text-xl font-semibold">{{ exercise.name }}</div>
     <p class="text-base text-gray-700">
-      {{ exercise.description || "Sem descrição" }}
+      {{ exercise.description || 'Sem descrição' }}
     </p>
   </div>
   <div class="flex flex-wrap gap-2">
