--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
-@import "primeicons/primeicons.css";
-@import "../node_modules/tailwindcss/base.css" layer(tailwindcss);
-@import "../node_modules/tailwindcss/components.css" layer(tailwindcss);
-@import "../node_modules/tailwindcss/utilities.css" layer(tailwindcss);
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
+@import 'primeicons/primeicons.css';
+@import '../node_modules/tailwindcss/base.css' layer(tailwindcss);
+@import '../node_modules/tailwindcss/components.css' layer(tailwindcss);
+@import '../node_modules/tailwindcss/utilities.css' layer(tailwindcss);
+@import 'primeng/resources/themes/lara-light-blue/theme.css';
+@import 'primeng/resources/primeng.css';
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
