--- a/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
+++ b/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
@@ -3,7 +3,7 @@
     class="flex flex-col justify-between h-full max-w-sm gap-4 p-4 px-6 overflow-hidden bg-white rounded-md shadow-sm"
   >
     <div>
-      <div class="mb-2 text-xl font-semibold">{{ exercise.name }}</div>
+      <div class="mb-2 text-xl font-semibold truncate">{{ exercise.name }}</div>
       <p class="text-base text-gray-700 break-all text-wrap">
         {{ exercise.description || 'Sem descrição' }}
       </p>
