--- a/src/app/features/workouts/pages/workouts/workouts.component.html
+++ b/src/app/features/workouts/pages/workouts/workouts.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="flex items-center justify-between gap-2 mb-6">
-    <h1 class="text-2xl font-semibold text-gray-800">Seus Treinos</h1>
+    <app-title title="Seus Treinos" />
     <p-button
       label="Adicionar Treino"
       size="small"
