--- a/src/app/features/workouts/pages/workout-details/workout-details.component.html
+++ b/src/app/features/workouts/pages/workout-details/workout-details.component.html
@@ -41,7 +41,7 @@
   <p-dialog
     header="Adicionar Exercício"
     [modal]="true"
-    [(visible)]="exerciseDialogVisible"
+    [(visible)]="isExerciseDialogVisible"
     [style]="{ width: '30rem' }"
     draggable="false"
   >
@@ -114,7 +114,7 @@
   <p-dialog
     header="Editar Treino"
     [modal]="true"
-    [(visible)]="editDialogVisible"
+    [(visible)]="isEditWorkoutDialogVisible"
     [style]="{ width: '30rem' }"
     draggable="false"
   >
@@ -174,7 +174,7 @@
   <p-dialog
     header="Confirmar Deletar"
     [modal]="true"
-    [(visible)]="deleteDialogVisible"
+    [(visible)]="isDeleteWorkoutVisible"
     [style]="{ width: '30rem' }"
     draggable="false"
   >
