--- a/src/app/features/workouts/pages/workout-details/workout-details.component.html
+++ b/src/app/features/workouts/pages/workout-details/workout-details.component.html
@@ -4,24 +4,27 @@
 
     <div class="flex gap-2">
       <p-button
-        label="Adicionar Exercício"
         size="small"
         icon="pi pi-plus"
+        label="Adicionar Exercício"
         iconPos="right"
         (click)="showExerciseDialog()"
       ></p-button>
       <p-button
-        label="Editar Treino"
         size="small"
         icon="pi pi-pencil"
         iconPos="right"
+        pTooltip="Editar Treino"
+        tooltipPosition="bottom"
         (click)="showEditDialog()"
       ></p-button>
       <p-button
-        label="Deletar Treino"
         size="small"
         icon="pi pi-trash"
         iconPos="right"
+        pTooltip="Deletar Treino"
+        severity="danger"
+        tooltipPosition="bottom"
         (click)="showDeleteDialog()"
       ></p-button>
     </div>
