--- a/src/app/features/workouts/pages/workout-details/workout-details.component.html
+++ b/src/app/features/workouts/pages/workout-details/workout-details.component.html
@@ -4,24 +4,27 @@
 
     <div class="flex gap-2">
       <p-button
-        label="Adicionar Exercício"
         size="small"
         icon="pi pi-plus"
+        label="Adicionar Exercício"
         iconPos="right"
         (click)="showExerciseDialog()"
       ></p-button>
       <p-button
-        label="Editar Treino"
         size="small"
         icon="pi pi-pencil"
         iconPos="right"
+        pTooltip="Editar Treino"
+        tooltipPosition="bottom"
         (click)="showEditDialog()"
       ></p-button>
       <p-button
-        label="Deletar Treino"
         size="small"
         icon="pi pi-trash"
         iconPos="right"
+        pTooltip="Deletar Treino"
+        severity="danger"
+        tooltipPosition="bottom"
         (click)="showDeleteDialog()"
       ></p-button>
     </div>
@@ -41,7 +44,7 @@
   <p-dialog
     header="Adicionar Exercício"
     [modal]="true"
-    [(visible)]="exerciseDialogVisible"
+    [(visible)]="isExerciseDialogVisible"
     [style]="{ width: '30rem' }"
     draggable="false"
   >
@@ -114,7 +117,7 @@
   <p-dialog
     header="Editar Treino"
     [modal]="true"
-    [(visible)]="editDialogVisible"
+    [(visible)]="isEditWorkoutDialogVisible"
     [style]="{ width: '30rem' }"
     draggable="false"
   >
@@ -174,7 +177,7 @@
   <p-dialog
     header="Confirmar Deletar"
     [modal]="true"
-    [(visible)]="deleteDialogVisible"
+    [(visible)]="isDeleteWorkoutVisible"
     [style]="{ width: '30rem' }"
     draggable="false"
   >
