--- a/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
+++ b/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
@@ -13,11 +13,11 @@
       <div class="flex flex-wrap gap-2">
         <span
           class="inline-block px-3 py-1 text-sm font-semibold text-blue-700 bg-blue-200 rounded-full"
-          >{{ exercise.sets }} sets</span
+          >{{ exercise.sets }} séries</span
         >
         <span
           class="inline-block px-3 py-1 text-sm font-semibold text-green-700 bg-green-200 rounded-full"
-          >{{ exercise.reps }} reps</span
+          >{{ exercise.reps }} repetições</span
         >
       </div>
       <div class="flex justify-between mt-6">
