--- a/src/app/features/workouts/pages/workouts/workouts.component.html
+++ b/src/app/features/workouts/pages/workouts/workouts.component.html
@@ -32,7 +32,7 @@
           pInputText
           id="name"
           autocomplete="off"
-          [(ngModel)]="newWorkout.name"
+          [(ngModel)]="newWorkout.planName"
         />
       </div>
 
@@ -43,7 +43,7 @@
           id="description"
           pInputText
           autocomplete="off"
-          [(ngModel)]="newWorkout.description"
+          [(ngModel)]="newWorkout.planDescription"
         />
       </div>
 
