--- a/src/app/features/workouts/pages/workout-details/components/exercise-list/exercise-list.component.html
+++ b/src/app/features/workouts/pages/workout-details/components/exercise-list/exercise-list.component.html
@@ -1,5 +1,10 @@
 <div
   class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4"
 >
-  <app-exercise *ngFor="let exercise of exercises" [exercise]="exercise" />
+  <app-exercise
+    *ngFor="let exercise of exercises"
+    [exercise]="exercise"
+    (exerciseUpdated)="onExerciseUpdated($event)"
+    (exerciseDeleted)="onExerciseDeleted($event)"
+  />
 </div>
