--- a/src/app/features/workouts/pages/workout-details/workout-details.component.html
+++ b/src/app/features/workouts/pages/workout-details/workout-details.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="flex items-center justify-between gap-2 mb-6">
-    <app-title [title]="workout.name" />
+    <app-title [title]="workout.planName" />
 
     <div class="flex gap-2">
       <p-button
@@ -34,12 +34,17 @@
     <h2 class="text-xl font-semibold text-gray-700 break-all text-wrap">
       Descrição
     </h2>
-    <p class="text-gray-600">{{ workout.description }}</p>
+    <p class="text-gray-600">{{ workout.planDescription }}</p>
     <p class="text-gray-600">Duração: {{ workout.duration }} minutos</p>
   </div>
 
   <h2 class="mb-4 text-xl font-semibold text-gray-700">Exercícios</h2>
-  <app-exercise-list [exercises]="workout.exercises"></app-exercise-list>
+  <app-exercise-list
+    [exercises]="exercises"
+    (exerciseUpdated)="onExerciseUpdated($event)"
+    (exerciseDeleted)="onExerciseDeleted($event)"
+    >" > >
+  </app-exercise-list>
 
   <p-dialog
     header="Adicionar Exercício"
@@ -62,7 +67,7 @@
           pInputText
           id="exerciseTitle"
           autocomplete="off"
-          [(ngModel)]="newExercise.name"
+          [(ngModel)]="newExercise.exerciseName"
         />
       </div>
 
@@ -75,7 +80,7 @@
           id="exerciseDescription"
           pInputText
           autocomplete="off"
-          [(ngModel)]="newExercise.description"
+          [(ngModel)]="newExercise.exerciseDescription"
         />
       </div>
 
@@ -85,7 +90,7 @@
           id="exerciseSets"
           mode="decimal"
           [min]="1"
-          [(ngModel)]="newExercise.sets"
+          [(ngModel)]="newExercise.seriesQuantity"
           autocomplete="off"
         />
       </div>
@@ -98,7 +103,7 @@
           id="exerciseReps"
           mode="decimal"
           [min]="1"
-          [(ngModel)]="newExercise.reps"
+          [(ngModel)]="newExercise.repetitionsQuantity"
           autocomplete="off"
         />
       </div>
@@ -133,7 +138,7 @@
           pInputText
           id="editName"
           autocomplete="off"
-          [(ngModel)]="editWorkout.name"
+          [(ngModel)]="editWorkout.planName"
         />
       </div>
 
@@ -146,7 +151,7 @@
           id="editDescription"
           pInputText
           autocomplete="off"
-          [(ngModel)]="editWorkout.description"
+          [(ngModel)]="editWorkout.planDescription"
         />
       </div>
 
