--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <aside
-  class="flex flex-col items-center justify-between h-full gap-8 px-8 py-4 overflow-y-auto bg-white w-80"
+  class="flex-col items-center justify-between hidden h-full gap-8 px-8 py-4 overflow-y-auto bg-white sm:flex w-80"
 >
   <div class="mt-8">
     <img src="/assets/logo.png" class="w-32 h-32" />
