--- a/src/app/features/workouts/pages/workouts/workouts.component.html
+++ b/src/app/features/workouts/pages/workouts/workouts.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div class="flex items-center justify-between gap-2 mb-6">
+  <div class="flex flex-wrap items-center justify-between gap-2 mb-6">
     <app-title title="Seus Treinos" />
     <p-button
       label="Adicionar Treino"
