refactor(sidebar): change button position

--- a/src/app/shared/components/app-layout/app-layout.component.html
+++ b/src/app/shared/components/app-layout/app-layout.component.html
@@ -3,7 +3,7 @@
     (onClick)="handleOpenSidebar()"
     icon="pi pi-bars"
     size="small"
-    class="absolute sm:hidden top-2 left-2"
+    class="absolute sm:hidden bottom-2 right-2"
   />
 
   <app-sidebar />
