refactor(profile): make it responsive

--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -23,12 +23,12 @@
       id="settings"
       class="flex flex-col w-full gap-5 mt-6 divide-y divide-zinc-200 dark:divide-zinc-700"
     >
-      <div class="flex flex-col gap-3 lg:grid lg:grid-cols-form">
+      <div class="flex flex-col gap-2">
         <p-inputGroup>
           <p-inputGroupAddon>
             <i class="pi pi-user"></i>
           </p-inputGroupAddon>
-          <div class="flex gap-1">
+          <div class="flex flex-col gap-2 lg:flex-row">
             <input
               class="p-2"
               pInputText
@@ -43,6 +43,7 @@
             />
           </div>
         </p-inputGroup>
+
         <p-inputGroup>
           <p-inputGroupAddon>
             <i class="pi pi-arrows-v"></i>
@@ -69,6 +70,7 @@
           />
         </p-inputGroup>
       </div>
+
       <div class="flex flex-col gap-3 pt-5 lg:grid lg:grid-cols-form">
         <p-inputGroup>
           <p-inputGroupAddon>
