--- a/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
+++ b/src/app/features/workouts/pages/workout-details/components/exercise/exercise.component.html
@@ -7,7 +7,7 @@
         {{ exercise.exerciseName }}
       </div>
       <p class="text-base text-gray-700 break-all text-wrap">
-        {{ exercise.exerciseName || 'Sem descrição' }}
+        {{ exercise.exerciseDescription || 'Sem descrição' }}
       </p>
     </div>
 
